Docs: fix fonts, code button mobile, roadmap link (#10987)
* hotfix

* inputs examples fix

---------

--- a/docs/.vuepress/theme/styles/layout/sidebar.styl
+++ b/docs/.vuepress/theme/styles/layout/sidebar.styl
@@ -611,6 +611,10 @@
     }
 
     .nav-links {
+        .roadmap { 
+            display: none
+        }
+
         &:not(.nav-frameworks) {
             div:first-child {
                 display: none
@@ -651,6 +655,8 @@
                     transform: rotate(180deg)
                 }
             }
+
+            
         }
     }
 }
